--- a/Image/Image.qrc
+++ b/Image/Image.qrc
@@ -1,6 +1,6 @@
 <RCC>
   <qresource prefix="Image">
-    <file>Background.jpg</file>
+    <file>back.png</file>
     <file>Forget.png</file>
     <file>ForgetC.png</file>
     <file>ForgetH.png</file>
