--- a/login_form.ui
+++ b/login_form.ui
@@ -158,7 +158,7 @@ font: 15pt &quot;Verdana&quot;;</string>
             <item row="2" column="0">
              <widget class="QLabel" name="label_3">
               <property name="styleSheet">
-               <string notr="true">color: rgb(231, 231, 231);
+               <string notr="true">color: #db5e5e;
 font: 15pt &quot;Verdana&quot;;</string>
               </property>
               <property name="text">
